@@ -71,3 +71,7 @@ Other Changes
   Closes #4907
 
 * Extended ``consider-using-in`` check to work for attribute access.
+
+* Setting ``min-similarity-lines`` to 0 now makes the similarty checker stop checking for duplicate code
+
+  Closes #4901
